Refactor + add comments MemberService